# ros-qn_optimizer

./: CMakeLists.txt  README.md  doxyfile  package.xml
examples/: constrained.cpp  simple.cpp
include/qn_optimizer/: qn_optimizer.h
src/: qn_optimizer.cpp
test/: test.cpp
